--- a/page-depth-01/General-Info.html
+++ b/page-depth-01/General-Info.html
@@ -379,11 +379,11 @@
                         UITS-Notice
                     </a>
                 </div>
-                <div class="link-item">
+                <!-- <div class="link-item">
                     <a href="http://ucam.uits.edu.bd/StudentManagement/Profile/StudentProfile.aspx?" target="_blank">
                         UCAM-Notice
                     </a>
-                </div>
+                </div> -->
                 <div class="link-item">
                     <a href="https://drive.google.com/drive/folders/1qSwFhUFgpWiNJAeJ_smbl99hlSPYYK7-" target="_blank">
                         Notice Archives
