--- a/page-depth-01/Tutorials.html
+++ b/page-depth-01/Tutorials.html
@@ -262,7 +262,7 @@
 
     <div class="topnav-1">
         <!-- APK LINK -->
-        <div class="navigation"
+        <div class="navigation1"
             style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
         <script src="../apk-link.js"></script>
         <a class="active-1" href="#">
@@ -294,17 +294,10 @@
     <div class="container-5" align=center>
         <table class="resources-table-5" align=center style="width:90%;">
             <tr>
-                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">UITS Resources
+                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">other tutorials
                 </p>
             </tr>
-            <tr>
-                <td>
-                    <a href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link"
-                        target="_blank">
-                        UITS Contests Archive
-                    </a>
-                </td>
-            </tr>
+            
             <tr>
                 <!-- 3rd container with different menu button -->
                 <td class="menu-button" id="menuButton3" align="center" style="color: rgba(240, 248, 255, 0.85);">
