--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <div class="topnav-1">
     <!-- APK LINK -->
-    <div class="navigation" style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
+    <div class="navigation1" style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
     <script src="apk-link.js"></script>
     <a class="active-1" href="page-depth-01/Tutorials.html">
       <small>Resources<br>Tutorials</small>
