--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -20,7 +20,7 @@
 
     <div class="topnav-1">
         <!-- APK LINK -->
-        <div class="navigation"
+        <div class="navigation1"
             style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
         <script src="../apk-link.js"></script>
         
