--- a/page-depth-01/page-depth-02/S08.html
+++ b/page-depth-01/page-depth-02/S08.html
@@ -14,7 +14,7 @@
  <!-- TOP BAR -->
  <div class="topnav-1">
         <!-- APK LINK -->
-        <div class="navigation"
+        <div class="navigation1"
             style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
         <script src="../../apk-link.js"></script>
 
