--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -458,7 +458,7 @@
                 <!-- <div class="category-title">Coding Resources</div> -->
                 <div class="link-item">
                     <a href="https://judge.beecrowd.com/en" target="_blank">
-                        beecrowd
+                        beecrowd (for beginners)
                     </a>
                 </div>
                 <div class="link-item">
@@ -468,7 +468,7 @@
                 </div>
                 <div class="link-item">
                     <a href="https://codeforces.com/" target="_blank">
-                        codeforces
+                        codeforces (standard)
                     </a>
                 </div>
                 <div class="link-item">
@@ -478,7 +478,7 @@
                 </div>
                 <div class="link-item">
                     <a href="https://vjudge.net/" target="_blank">
-                        Virtual Judge
+                        Virtual Judge (college contests)
                     </a>
                 </div>
                 <div class="link-item">
@@ -488,7 +488,7 @@
                 </div>
                 <div class="link-item">
                     <a href="https://leetcode.com/" target="_blank">
-                        leetcode
+                        leetcode (interview prep)
                     </a>
                 </div>
                 <div class="link-item">
