--- a/page-depth-01/Tutorials.html
+++ b/page-depth-01/Tutorials.html
@@ -304,7 +304,7 @@
                     <!-- <div class="menu-line"></div>
                     <div class="menu-line"></div>
                     <div class="menu-line"></div> -->
-                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">UITS Tutorials
+                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">UITS-affiliate
                     </p>
                 </td>
             </tr>
