--- a/page-depth-01/Tutorials.html
+++ b/page-depth-01/Tutorials.html
@@ -308,14 +308,11 @@
                     </p>
                 </td>
             </tr>
-        </table>
-    </div>
-
-    <div class="container-5" align=center>
-        <table class="resources-table-5" align=center style="width:90%;">
             <tr>
-                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">personal tutorials
-                </p>
+                <td style="background-color: rgba(240, 248, 255, 0);">
+
+                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">personal tutorials</p>
+                </td>
             </tr>
             <tr>
                 <td>
@@ -324,11 +321,8 @@
                     </a>
                 </td>
             </tr>
-
         </table>
     </div>
-
-
 
 
     <!-- 3rd popup menu with different content -->
