--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -328,6 +328,17 @@
                     </p>
                 </td>
             </tr>
+             <tr>
+                <td class="menu-button" id="menuButton4" align="center" style="color: rgba(240, 248, 255, 0.85);">
+     <p class="container-5" align="center" style="color: rgba(240, 248, 255, 0.649);">
+        <a style="color: rgba(240, 248, 255, 0.649);"
+            href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link"
+            target="_blank">
+            UITS Contests Archive
+        </a>
+    </p>
+            </td>
+            </tr>
         </table>
     </div>
 
@@ -360,13 +371,6 @@
         </tr>
     </table>
 
-     <p class="container-5" align="center" style="color: rgba(240, 248, 255, 0.649);">
-        <a style="color: rgba(240, 248, 255, 0.649);"
-            href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link"
-            target="_blank">
-            UITS Contests Archive
-        </a>
-    </p>
 
     
     <br><br><br>
