--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -486,7 +486,7 @@
         <!-- <div class="popup-menu-title">Resources & Tools</div> -->
         <div class="popup-menu-categories">
             <div class="popup-menu-category" align="center">
-                <div class="category-title">Coding Resources</div>
+<!--                 <div class="category-title">Coding Resources</div> -->
 <!--  <div class="link-item">
                     <a href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link"
                         target="_blank">
