--- a/page-depth-01/Blog.html
+++ b/page-depth-01/Blog.html
@@ -354,11 +354,11 @@
                         Mrinmoy Biswas Akash @blogspot
                     </a>
                 </div>
-                <div class="link-item">
+<!--                 <div class="link-item">
                     <a href="#" target="_blank">
                         #
                     </a>
-                </div>
+                </div> -->
 
                 <!-- More links here -->
             </div>
@@ -377,11 +377,11 @@
                         YouKn0wWho @codeforces
                     </a>
                 </div>
-                <div class="link-item">
+<!--                 <div class="link-item">
                     <a href="#" target="_blank">
                         #
                     </a>
-                </div>
+                </div> -->
 
 
                 <!-- More links here -->
@@ -402,11 +402,11 @@
                         r/programming @reddit
                     </a>
                 </div>
-                <div class="link-item">
+<!--                 <div class="link-item">
                     <a href="#" target="_blank">
                         #
                     </a>
-                </div>
+                </div> -->
                 <!-- More links here -->
             </div>
         </div>
