added online judge list

--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -262,7 +262,7 @@
         <div class="navigation1"
             style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
         <script src="../apk-link.js"></script>
-        
+
         <a class="active-1" href="Tutorials.html">
             <small>Resources<br>Tutorials</small>
         </a>
@@ -290,7 +290,7 @@
     </div>
     <!-- ----------------------------------------------------------------------- -->
 
-   
+
     <div class="container-5" align=center>
         <table class="resources-table-5" align=center style="width:90%;">
             <tr>
@@ -328,16 +328,16 @@
                     </p>
                 </td>
             </tr>
-             <tr>
+            <tr>
                 <td class="menu-button" id="menuButton4" align="center" style="color: rgba(240, 248, 255, 0.85);">
-     <p class="highlights" align="center"  style="color: rgba(240, 248, 255, 0.649);">
-        <a style="color: rgba(240, 248, 255, 0.649);"
-            href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link"
-            target="_blank">
-            UITS Contests Archive
-        </a>
-    </p>
-            </td>
+                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">
+                        <a style="color: rgba(240, 248, 255, 0.649);"
+                            href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link"
+                            target="_blank">
+                            UITS Contests Archive
+                        </a>
+                    </p>
+                </td>
             </tr>
         </table>
     </div>
@@ -372,7 +372,7 @@
     </table>
 
 
-    
+
     <br><br><br>
 
 
@@ -503,6 +503,20 @@
                         atcoder
                     </a>
                 </div>
+                <table align=center class="resources-table-5"  style="width: 105%;">
+                    <tr>
+                        <td>
+                            <div class="container">
+
+                                <div class="img-container" style="height: 200px">
+                                    <img src="../images/code-sites.webp" alt="Codeforces Streams Page" style="border-radius: 5px 5px 5px 5px;">
+                                    <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
+                                </div>
+                            </div>
+                        </td>
+
+                    </tr>
+                </table>
                 <!-- More links here -->
             </div>
         </div>
