--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -362,7 +362,7 @@
                 <div>
                     <div class="container">
 
-                        <div class="img-container">
+                        <div class="img-container" style="height: 200px;">
                             <img src="../images/cf-streams.webp" alt="Codeforces Streams Page">
                             <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
                         </div>
@@ -380,7 +380,7 @@
 
 
     <!-- First popup menu -->
-    <div class="popup-menu" id="popupMenu1">
+    <div class="popup-menu" id="popupMenu1"  style="max-width:70%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Content Creators</div> -->
         <div class="popup-menu-categories">
@@ -412,7 +412,7 @@
     </div>
 
     <!-- Second popup menu with different content -->
-    <div class="popup-menu" id="popupMenu2">
+    <div class="popup-menu" id="popupMenu2" style="max-width:70%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Resources & Tools</div> -->
         <div class="popup-menu-categories">
@@ -457,7 +457,7 @@
 
 
     <!-- 4th popup menu with different content -->
-    <div class="popup-menu" id="popupMenu4">
+    <div class="popup-menu" id="popupMenu4" style="max-width:70%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Resources & Tools</div> -->
         <div class="popup-menu-categories">
