added course list images

--- a/page-depth-01/page-depth-02/S01.html
+++ b/page-depth-01/page-depth-02/S01.html
@@ -10,29 +10,29 @@
 
 <body>
 
-<!-- TOP BAR -->
+    <!-- TOP BAR -->
 
-<div class="topnav-1">
+    <div class="topnav-1">
         <!-- APK LINK -->
         <div class="navigation1"
             style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
         <script src="../../apk-link.js"></script>
 
-        
-    <a class="active-1" href="../Tutorials.html">
-        <small>Resources<br>Tutorials</small>
-    </a>
-    <a class="active-1" href="../References.html">
-        <small>Project<br>References</small>
-    </a>
-    <a class="active-1" href="../Blog.html">
-        <small>CSE<br>Blog</small>
-    </a>
-    <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
-        target="_blank">
-        <small>UITS<br>G-Drive</small>
-    </a>
-</div>
+
+        <a class="active-1" href="../Tutorials.html">
+            <small>Resources<br>Tutorials</small>
+        </a>
+        <a class="active-1" href="../References.html">
+            <small>Project<br>References</small>
+        </a>
+        <a class="active-1" href="../Blog.html">
+            <small>CSE<br>Blog</small>
+        </a>
+        <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
+            target="_blank">
+            <small>UITS<br>G-Drive</small>
+        </a>
+    </div>
 
 
 
@@ -80,6 +80,17 @@
                     <a href="https://drive.google.com/drive/folders/1bI8ewiui3Cv09A5DWc59RwHADIQB_mnn" target="_blank">
                         S01 Questions
                     </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="container">
+
+                        <div class="img-container" style="height: 200px;">
+                            <img src="S01 Course List.webp" alt="Codeforces Streams Page">
+                            <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
+                        </div>
+                    </div>
                 </td>
             </tr>
         </table>
