--- a/page-depth-01/page-depth-02/S05.html
+++ b/page-depth-01/page-depth-02/S05.html
@@ -72,6 +72,17 @@
             Questions</a>
         </td>
       </tr>
+      <tr>
+        <td>
+            <div class="container">
+
+                <div class="img-container" style="height: 200px;">
+                    <img src="S05 Course List.webp" alt="Codeforces Streams Page">
+                    <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
+                </div>
+            </div>
+        </td>
+    </tr>
     </table>
   </div>
 
