--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -359,14 +359,13 @@
 
                 <!-- "top-bar2" -->
 
-                <div>
-                    <div class="container">
+                <div class="container">
 
-                        <div class="img-container" style="height: 200px;">
-                            <img src="../images/cf-streams.webp" alt="Codeforces Streams Page">
-                            <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
-                        </div>
+                    <div class="img-container" style="height: 200px;">
+                        <img src="../images/cf-streams.webp" alt="Codeforces Streams Page">
+                        <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
                     </div>
+                </div>
             </th>
         </tr>
     </table>
@@ -380,7 +379,7 @@
 
 
     <!-- First popup menu -->
-    <div class="popup-menu" id="popupMenu1"  style="max-width:70%;">
+    <div class="popup-menu" id="popupMenu1" style="max-width:70%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Content Creators</div> -->
         <div class="popup-menu-categories">
@@ -503,13 +502,14 @@
                         atcoder
                     </a>
                 </div>
-                <table align=center class="resources-table-5"  style="width: 105%;">
+                <table align=center class="resources-table-5" style="width: 105%;">
                     <tr>
                         <td>
                             <div class="container">
 
                                 <div class="img-container" style="height: 200px">
-                                    <img src="../images/code-sites.webp" alt="Codeforces Streams Page" style="border-radius: 5px 5px 5px 5px;">
+                                    <img src="../images/code-sites.webp" alt="Codeforces Streams Page"
+                                        style="border-radius: 5px 5px 5px 5px;">
                                     <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
                                 </div>
                             </div>
