--- a/page-depth-01/page-depth-02/S03.html
+++ b/page-depth-01/page-depth-02/S03.html
@@ -98,6 +98,17 @@
                     </a>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <div class="container">
+
+                        <div class="img-container" style="height: 200px;">
+                            <img src="S03 Course List.webp" alt="Codeforces Streams Page">
+                            <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
+                        </div>
+                    </div>
+                </td>
+            </tr>
         </table>
     </div>
 
