--- a/page-depth-01/page-depth-02/S08.html
+++ b/page-depth-01/page-depth-02/S08.html
@@ -11,27 +11,27 @@
 
 <body>
 
- <!-- TOP BAR -->
- <div class="topnav-1">
-        <!-- APK LINK -->
-        <div class="navigation1"
-            style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
-        <script src="../../apk-link.js"></script>
+  <!-- TOP BAR -->
+  <div class="topnav-1">
+    <!-- APK LINK -->
+    <div class="navigation1"
+      style="display: flex;justify-content: flex-end;background-color: #333;min-height: 50px;width: 100%;"></div>
+    <script src="../../apk-link.js"></script>
 
-  <a class="active-1" href="../Tutorials.html">
+    <a class="active-1" href="../Tutorials.html">
       <small>Resources<br>Tutorials</small>
-  </a>
-  <a class="active-1" href="../References.html">
+    </a>
+    <a class="active-1" href="../References.html">
       <small>Project<br>References</small>
-  </a>
-  <a class="active-1" href="../Blog.html">
+    </a>
+    <a class="active-1" href="../Blog.html">
       <small>CSE<br>Blog</small>
-  </a>
-  <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
+    </a>
+    <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
       target="_blank">
       <small>UITS<br>G-Drive</small>
-  </a>
-</div>
+    </a>
+  </div>
 
 
   <!-- BOTTOM BAR "navbar" -->
@@ -54,35 +54,44 @@
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1aKT3eqY5MncYlZzBQOMnDokaGhg2Ear0?usp=drive_link"  target="_blank">S08
+          <a href="https://drive.google.com/drive/folders/1tk0VTCKn6lN7E9z6nwMchCBK3kf6XpPr?usp=drive_link"
+            target="_blank">S08
+            Books</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1aKT3eqY5MncYlZzBQOMnDokaGhg2Ear0?usp=drive_link"
+            target="_blank">S08
             Outlines</a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1aZEwrtBNlD1QnDkToy9E0I9XqWUulckF?usp=drive_link"  target="_blank">S08
+          <a href="https://drive.google.com/drive/folders/1aZEwrtBNlD1QnDkToy9E0I9XqWUulckF?usp=drive_link"
+            target="_blank">S08
             Questions</a>
         </td>
       </tr>
       <tr>
         <td>
-            <div class="container">
+          <div class="container">
 
-                <div class="img-container" style="height: 200px;">
-                    <img src="S08 Course List.webp" alt="Codeforces Streams Page">
-                    <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
-                </div>
+            <div class="img-container" style="height: 200px;">
+              <img src="S08 Course List.webp" alt="Codeforces Streams Page">
+              <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
             </div>
+          </div>
         </td>
-    </tr>
+      </tr>
     </table>
   </div>
 
   <!-- <div align=center>
     <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a>
   </div> -->
-  
-  
+
+
   <br><br><br><br><br>
 
   <!-- HOME BUTTON -->
