--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -461,7 +461,7 @@
         <!-- <div class="popup-menu-title">Resources & Tools</div> -->
         <div class="popup-menu-categories">
             <div class="popup-menu-category" align="center">
-                <!-- <div class="category-title">Coding Resources</div> -->
+                <div class="category-title">#include <bit/stdc++.h></div> 
                 <div class="link-item">
                     <a href="https://judge.beecrowd.com/en" target="_blank">
                         beecrowd (for beginners)
