added code site icons

--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -461,48 +461,45 @@
         <!-- <div class="popup-menu-title">Resources & Tools</div> -->
         <div class="popup-menu-categories">
             <div class="popup-menu-category" align="center">
-                <div class="category-title">#include &ltbit/stdc++.h&gt</div> 
-                <div class="link-item">
-                    <a href="https://judge.beecrowd.com/en" target="_blank">
-                        beecrowd (for beginners)
+                <div class="category-title">#include &ltbit/stdc++.h&gt</div>
+                <div class="link-item"style="background-color: #ffffff;">
+                    <!-- <p style="background-color: #ffffff;"> -->
+                        <a href="https://judge.beecrowd.com/en" target="_blank" style="color: #000000ab;"><img src="../images\logo-beecrowd.webp" height="50" width="86.21"><br><i><small>(for learning the fundamentals)</small></i>
+                        </a>
+                    <!-- </p> -->
+                </div>
+                <div class="link-item" style="background-color: #ffffff;">
+                    <a href="https://www.hackerrank.com/" target="_blank" style="color: #000000ab;"><img src="../images\hackerrank.svg" height="60" width="256.15"><br><i><small>( for learning STL concepts)</small></i>
+                        </a>
+                </div>
+                <div class="link-item" style="background-color: #ffffff;">
+                   <a href="https://codeforces.com/" target="_blank"style="color: #000000ab;"><img src="../images\codeforces-sponsored-by-ton.webp" height="50" width="213.46"><br><i><small>(for participating contests with unique problem sets)</small></i>
+                        </a>
+                </div>
+                
+                <div class="link-item" style="background-color: #ffffff;">
+                    <a href="https://leetcode.com/" target="_blank"style="color: #000000ab;"><img src="../images\LeetCode_Logo.webp" height="50" width="206.12"><br><i><small>(a great platform for job preparation)</small></i>
+                        </a>
+                </div>
+                <div class="link-item"  style="background-color: #ffffff00;">
+                    <a href="https://toph.co/" target="_blank" style="color: #000000ab;"><img src="../images\toph.webp"  height="50" width="155.00"><br><i><small>(for practicing topic-wise problems)</small></i>
+                        </a>
+                </div>
+                <div class="link-item" style="background-color: #ffffff00;">
+                    <a href="https://www.codechef.com/" target="_blank" style="color: #000000ab;">
+                        <img src="../images\codechef.svg"><br><i><small>(similar to Codeforces)</small></i>
+                        </a>
+                </div>
+                <div class="link-item" style="background-color: #ffffff;">
+                    <a href="https://atcoder.jp/" target="_blank" style="color: #000000ab;"><img src="../images\atcoder.webp" height="50" width="59.22"><br><i><small>(similar to Codeforces)</small></i>
+                        </a>
+                </div>
+                <div class="link-item" style="text-shadow: 1px 1px #000000;">
+                    <a href="https://vjudge.net/" target="_blank" style="color: #000000ab;">
+                        Virtual Judge<br><i><small>(for organizing contests)</small></i>
                     </a>
                 </div>
-                <div class="link-item">
-                    <a href="https://www.hackerrank.com/" target="_blank">
-                        hackerrank
-                    </a>
-                </div>
-                <div class="link-item">
-                    <a href="https://codeforces.com/" target="_blank">
-                        codeforces (standard)
-                    </a>
-                </div>
-                <div class="link-item">
-                    <a href="https://www.codechef.com/" target="_blank">
-                        codechef
-                    </a>
-                </div>
-                <div class="link-item">
-                    <a href="https://vjudge.net/" target="_blank">
-                        Virtual Judge (college contests)
-                    </a>
-                </div>
-                <div class="link-item">
-                    <a href="https://toph.co/" target="_blank">
-                        toph
-                    </a>
-                </div>
-                <div class="link-item">
-                    <a href="https://leetcode.com/" target="_blank">
-                        leetcode (interview prep)
-                    </a>
-                </div>
-                <div class="link-item">
-                    <a href="https://atcoder.jp/" target="_blank">
-                        atcoder
-                    </a>
-                </div>
-                <table align=center class="resources-table-5" style="width: 105%;">
+                <!-- <table align=center class="resources-table-5" style="width: 105%;">
                     <tr>
                         <td>
                             <div class="container">
@@ -516,7 +513,7 @@
                         </td>
 
                     </tr>
-                </table>
+                </table> -->
                 <!-- More links here -->
             </div>
         </div>
