--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -481,24 +481,25 @@
                     <a href="https://leetcode.com/" target="_blank"style="color: #000000ab;"><img src="../images\LeetCode_Logo.webp" height="50" width="206.12"><br><i><small>(a great platform for job preparation)</small></i>
                         </a>
                 </div>
-                <div class="link-item"  style="background-color: #ffffff00;">
-                    <a href="https://toph.co/" target="_blank" style="color: #000000ab;"><img src="../images\toph.webp"  height="50" width="155.00"><br><i><small>(for practicing topic-wise problems)</small></i>
+                <div class="link-item" >
+                    <a href="https://vjudge.net/" target="_blank" >
+                        Virtual Judge<br><i><small>(for organizing contests)</small></i>
+                    </a>
+                </div>
+                <div class="link-item" >
+                    <a href="https://toph.co/" target="_blank"><img src="../images\toph.webp"  height="40" width="124.00"><br><i><small>(for practicing topic-wise problems)</small></i>
                         </a>
                 </div>
-                <div class="link-item" style="background-color: #ffffff00;">
-                    <a href="https://www.codechef.com/" target="_blank" style="color: #000000ab;">
-                        <img src="../images\codechef.svg"><br><i><small>(similar to Codeforces)</small></i>
+                <div class="link-item">
+                    <a href="https://www.codechef.com/" target="_blank">
+                        <img src="../images\codechef.svg" width="129.00" height="50"><br><i><small>(similar to Codeforces)</small></i>
                         </a>
                 </div>
                 <div class="link-item" style="background-color: #ffffff;">
                     <a href="https://atcoder.jp/" target="_blank" style="color: #000000ab;"><img src="../images\atcoder.webp" height="50" width="59.22"><br><i><small>(similar to Codeforces)</small></i>
                         </a>
                 </div>
-                <div class="link-item" style="text-shadow: 1px 1px #000000;">
-                    <a href="https://vjudge.net/" target="_blank" style="color: #000000ab;">
-                        Virtual Judge<br><i><small>(for organizing contests)</small></i>
-                    </a>
-                </div>
+                
                 <!-- <table align=center class="resources-table-5" style="width: 105%;">
                     <tr>
                         <td>
