--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -290,7 +290,7 @@
     </div>
     <!-- ----------------------------------------------------------------------- -->
 
-    <div class="container-5" align=center>
+    <div class="container-5" align=center >
         <table class="resources-table-5" align=center style="width:90%;">
             <tr>
                 <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">
@@ -361,7 +361,7 @@
 
 
     <!-- First popup -->
-    <div class="popup-menu" id="popupMenu1">
+    <div class="popup-menu" id="popupMenu1"  style="max-width:70%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Resources & Tools</div> -->
         <div class="popup-menu-categories">
@@ -398,7 +398,7 @@
     </div>
 
     <!-- 2nd popup menu -->
-    <div class="popup-menu" id="popupMenu2">
+    <div class="popup-menu" id="popupMenu2"  style="max-width:70%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Content Creators</div> -->
         <div class="popup-menu-categories">
@@ -441,7 +441,7 @@
     </div>
 
     <!-- 3rd popup menu with different content -->
-    <div class="popup-menu" id="popupMenu3">
+    <div class="popup-menu" id="popupMenu3" style="max-width:70%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Resources & Tools</div> -->
         <div class="popup-menu-categories">
@@ -481,9 +481,9 @@
     </div>
 
     <!-- 4th popup menu with different content -->
-    <div class="popup-menu" id="popupMenu4">
+    <div class="popup-menu" id="popupMenu4" style="max-width:70%;">
         <div class="popup-close popup-close-btn"></div>
-        <!-- <div class="popup-menu-title">Resources & Tools</div> -->
+        <div class="popup-menu-title">Backup 27.02.25<br><small>(Not Shared)</small></div>
         <div class="popup-menu-categories">
             <div class="popup-menu-category" align="center">
 <!--                 <div class="category-title">Coding Resources</div> -->
