cut software list to resources

--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -319,8 +319,24 @@
             </tr>
             <td style="background-color: rgba(240, 248, 255, 0);">
 
-                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">More Links</p>
-            </td>
+                <!-- <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">More Links</p> -->
+                
+    
+            <div align="center" style="color: #000000b2;">
+                <form>
+                    <label for="softwares" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);"><br><small>More Links</small></label>
+                    <select name="cars" id="softwares">
+                        <option value=""></option>
+                        <option value=""><a href="https://github.com/Tichau/FileConverter/releases/tag/v2.1 "
+                                target="_blank">FileConverter</a></option>
+                        <option value=""><a href="https://handbrake.fr/downloads.php  " target="_blank">handbrake</a></option>
+                        <option value=""><a href="https://github.com/microsoft/PowerToys/releases/tag/v0.88.0"
+                                target="_blank">ms-PowerToys</a></option>
+                        <!-- <option value=""></option> -->
+                    </select>
+                </form>
+                <br>
+            </div></td>
             </tr>
             <!-- ------------------------------------------------------------------------ -->
             <!-- ------------------------------------------------------------------------ -->
