added paragraph to popup buttons

--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -297,29 +297,29 @@
                     Curated-Resources<br><br></p>
             </tr>
             <tr>
-                <td>
+                <td><p>
                     <a href="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt" target="_blank">
                         Programming References
-                    </a>
+                    </a></p>
                 </td>
             </tr>
             <tr>
-                <td>
+                <td><p>
                     <a href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">
                         Curated Book List
-                    </a>
+                    </a></p>
                 </td>
             </tr>
             <tr>
-                <td>
+                <td><p>
                     <a href="page-depth-02\Resources-Dump.html">
                         Saraf's Resources List
-                    </a>
+                    </a></p>
                 </td>
             </tr>
             <td style="background-color: rgba(240, 248, 255, 0);">
 
-                <!-- <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">More Links</p> -->
+                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">More Links</p>
                 
     
             <div align="center" style="color: #000000b2;">
@@ -353,13 +353,7 @@
                     </p>
                 </td>
             </tr>
-            <tr><!-- 2ndcontainer with menu button -->
-                <td class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);">
 
-                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">People I want to
-                        keep following</p>
-                </td>
-            </tr>
             <tr><!-- 4th container with menu button -->
                 <td class="menu-button" id="menuButton4" align="center" style="color: rgba(240, 248, 255, 0.85);">
 
@@ -373,45 +367,6 @@
     <!-- -------------------------------------------------------------- -->
     <!-- -------------------------------------------------------------- -->
     <!-- -------------------------------------------------------------- -->
-
-
-
-    <!-- First popup -->
-    <div class="popup-menu" id="popupMenu1"  style="max-width:70%;">
-        <div class="popup-close popup-close-btn"></div>
-        <!-- <div class="popup-menu-title">Resources & Tools</div> -->
-        <div class="popup-menu-categories">
-            <div class="popup-menu-category" align="center">
-                <!-- <div class="category-title">Coding Resources</div> -->
-                <div class="link-item">
-                    <a href="https://github.com/ShahjalalShohag" target="_blank">
-                        youkn0wwho <br>(Shahjalal Shohag)
-                    </a>
-                </div>
-                <div class="link-item">
-                    <a href="https://thebigcb.com/" target="_blank">
-                        Code Bullet
-                    </a>
-                </div>
-                <div class="link-item">
-                    <a href="https://www.3blue1brown.com/" target="_blank">
-                        3blue1brown<br> (Grant Sanderson)
-                    </a>
-                </div>
-                <div class="link-item">
-                    <a href="https://www.youtube.com/@OnnorokomPathshala/playlists" target="_blank">
-                        Onnorokom Pathshala
-                    </a>
-                </div>
-                <div class="link-item">
-                    <a href="https://www.linkedin.com/in/md-maksudul-hossain-4300a095" target="_blank">
-                        Md Maksudul Hossain <br>(Onnorokom Pathshala)
-                    </a>
-                </div>
-                <!-- More links here -->
-            </div>
-        </div>
-    </div>
 
     <!-- 2nd popup menu -->
     <div class="popup-menu" id="popupMenu2"  style="max-width:70%;">
@@ -527,7 +482,7 @@
             document.addEventListener('DOMContentLoaded', function () {
                 // Button and popup pairs
                 const menuPairs = [
-                    { button: 'menuButton1', popup: 'popupMenu1' },
+                    // { button: 'menuButton1', popup: 'popupMenu1' },
                     { button: 'menuButton2', popup: 'popupMenu2' },
                     { button: 'menuButton3', popup: 'popupMenu3' },
                     { button: 'menuButton4', popup: 'popupMenu4' }
