--- a/page-depth-01/Tutorials.html
+++ b/page-depth-01/Tutorials.html
@@ -315,15 +315,58 @@
                 </td>
             </tr>
             <tr>
-                <td>
+                <td><p>
                     <a href="page-depth-02/My-guides.html">
                         b1tranger @YT
-                    </a>
+                    </a></p>
+                </td>
+            </tr>
+            <tr><!-- 2ndcontainer with menu button -->
+                <td class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);">
+
+                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">People I want to
+                        keep following</p>
                 </td>
             </tr>
         </table>
     </div>
 
+       <!-- First popup -->
+       <div class="popup-menu" id="popupMenu1"  style="max-width:70%;">
+        <div class="popup-close popup-close-btn"></div>
+        <!-- <div class="popup-menu-title">Resources & Tools</div> -->
+        <div class="popup-menu-categories">
+            <div class="popup-menu-category" align="center">
+                <!-- <div class="category-title">Coding Resources</div> -->
+                <div class="link-item">
+                    <a href="https://github.com/ShahjalalShohag" target="_blank">
+                        youkn0wwho <br>(Shahjalal Shohag)
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a href="https://thebigcb.com/" target="_blank">
+                        Code Bullet
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a href="https://www.3blue1brown.com/" target="_blank">
+                        3blue1brown<br> (Grant Sanderson)
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a href="https://www.youtube.com/@OnnorokomPathshala/playlists" target="_blank">
+                        Onnorokom Pathshala
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a href="https://www.linkedin.com/in/md-maksudul-hossain-4300a095" target="_blank">
+                        Md Maksudul Hossain <br>(Onnorokom Pathshala)
+                    </a>
+                </div>
+                <!-- More links here -->
+            </div>
+        </div>
+    </div>
 
     <!-- 3rd popup menu with different content -->
     <div class="popup-menu" id="popupMenu3">
@@ -372,7 +415,7 @@
             document.addEventListener('DOMContentLoaded', function () {
                 // Button and popup pairs
                 const menuPairs = [
-                    //  { button: 'menuButton1', popup: 'popupMenu1' },
+                     { button: 'menuButton1', popup: 'popupMenu1' },
                     //  { button: 'menuButton2', popup: 'popupMenu2' },
                     { button: 'menuButton3', popup: 'popupMenu3' }
                     //  { button: 'menuButton4', popup: 'popupMenu4' }
